--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,12 @@ jobs:
 
       - name: Git Status
         run: git status
-        env:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
+            
 
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
 
          
