--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,17 @@ on:
     - cron: "10 * * * *"
     
 jobs:
-  generate-tokyo:
-    name: summarize
+  generate-json:
+    name: rest
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
+        with:
+          fetch-depth: 1
+          
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v1.4.2
         with:
           node-version: 12.x
 
@@ -24,9 +26,3 @@ jobs:
         
       - name: Generate index.js
         run: node sheet-to-json_generic.js
-            
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.REST_TOKEN }}
