--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,10 @@ jobs:
       - name: Git Status
         run: git status
 
+      - name: Commit files
+        run: |
+          git config --local user.email adityaparsad01@gmail.com
+          git config --local user.name "adityaparsad01"
+          git add .
+          git commit -m "file update: json" || exit 0
+
