--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,10 @@ jobs:
         run: |
           git config --local user.email adityaparsad01@gmail.com
           git config --local user.name "adityaparsad01"
-          git add .
+          git add /home/runner/work/RESTAPI/RESTAPI/faq.json
+          git add /home/runner/work/RESTAPI/RESTAPI/links.json
+          git add /home/runner/work/RESTAPI/RESTAPI/tnc.json
+          git add /home/runner/work/RESTAPI/RESTAPI/doctors.json
           git commit -m "file update: json" || exit 0
 
       - name: Push changes
